# FezDot

./: .clang-format  CMakeLists.txt  README.md
package/: dot.desktop  fez-dot.desktop
qml/: ColorPickerRGB.qml  EditWindow.qml  MainWindow.qml  qml.qrc
qml/components/: Button.qml  ButtonOutlined.qml  GroupBox.qml  InputColor.qml  InputDouble.qml  InputInt.qml  RadioButton.qml  Slider.qml
shader/: dot_v.glsl  shader.qrc
src/: CMakeLists.txt  backend.cpp  backend.hpp  dot_fbo.cpp  dot_fbo.hpp  dot_render.cpp  dot_render.hpp  main.cpp
src/glsl/: dot_f.glsl
src/qml/: ApplicationSettings.qml  ColorPickerEasy.qml  ColorPickerHSL.qml  ColorPickerHSLA.qml  ColorPickerRGB.qml  ColorPickerRGBA.qml  ColorPickerSepcial.qml  DialogNewTheme.qml  DotView.qml  EditWindow.qml  MainWindow.qml  qml.qrc
src/qml/components/: InputColorHSL.qml  InputColorHSLA.qml  InputColorRGB.qml  InputColorRGBA.qml  InputDouble.qml  InputInt.qml
src/shader/: dot.frag  dot.vert  shader.qrc
